--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
                 <h1><a href="{{ site.baseurl }}/">{{ site.harmony.name }}</a></h1>
                 <h2>{{ site.harmony.description }}</h2>
                 {% include header-links.html %}                
-            </div>
+           
 {% for post in site.posts %}
 {% capture month %}{{ post.date | date: '%m%Y' }}{% endcapture %}
 {% capture nmonth %}{{ post.next.date | date: '%m%Y' }}{% endcapture %}
@@ -17,5 +17,5 @@ layout: default
 {% unless post.tags contains 'memo' %}
         <h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
 {% endunless %}
-{% endfor %}
+{% endfor %} </div>
 </header>
