--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 ---
-permalink: test
+permalink: /test/
 ---
 <div id="RecentComments" class="dsq-widget">
 <script type="text/javascript" src="http://sikujekyll.disqus.com/recent_comments_widget.js?num_items=5&hide_mods=0&hide_avatars=0&avatar_size=32&excerpt_length=50"></script>
