--- a/test.html
+++ b/test.html
@@ -1,7 +1,16 @@
 ---
 layout: default
 permalink: /test/
+title: Recent comments
 ---
-<div id="RecentComments" class="dsq-widget">
-<script type="text/javascript" src="http://sikujekyll.disqus.com/recent_comments_widget.js?num_items=5&hide_mods=0&hide_avatars=0&avatar_size=32&excerpt_length=50"></script>
-</div>
+<header class="main-header">
+            <div class="wc-container">
+                <h1><a href="{{ site.baseurl }}/">{{ site.harmony.name }}</a></h1>
+                <h2>{{ site.harmony.description }}</h2>
+                {% include header-links.html %} 
+              
+
+<script type="text/javascript" src="http://sikujekyll.disqus.com/recent_comments_widget.js?num_items=5&hide_mods=0&hide_avatars=0&avatar_size=32&excerpt_length=200"></script>
+
+  <div id="RecentComments" class="dsq-widget">
+  </div>
