--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: index
 ---
-<div class="indexcontainer">
+<header class="main-header">
 
 <div class="wc-container">
             {% for post in site.posts %}
@@ -16,4 +16,4 @@ layout: index
             {% endunless %}
 {% endfor %}
 </div>
-</div>
+</header>
