--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@ permalink: /search/
 ---
 <script>
   (function() {
-    var cx = '011571899064136694895:ozxd8-0aqhy';
+    var cx = '011571899064136694895:3q62_enexh4';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
