--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 
             {% for post in site.posts %}
             {% unless post.tags contains 'memo' %}
-                        <span><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a>{{ post.date | date: '%F' }}</span>
+                        <h4><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h4><span>{{ post.date | date: '%F' }}</span>
             {% endunless %}
 {% endfor %}
             </div>
