--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 
             {% for post in site.posts %}
             {% unless post.tags contains 'memo' %}
-                        <h5><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h5><span>{{ post.date | date: '%F' }}</span>
+                        <div><h5><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h5><span style="float: right;">{{ post.date | date: '%F' }}</span></div>
             {% endunless %}
 {% endfor %}
             </div>
