--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@ layout: default
 
             {% for post in site.posts %}
             {% unless post.tags contains 'memo' %}
-                        <div><h6><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h6><span>{{ post.date | date: '   %F' }}</span></div>
+
+
+                        <div><h6><a href="{{post.url}}">{{post.title}}</a></h6><span>{{ post.date | date: '   %F' }}</span></div>
+
+
+
             {% endunless %}
 {% endfor %}
             </div>
