--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
             {% unless post.tags contains 'memo' %}
 
 
-                        <div><h6><a href="{{post.url}}">{{post.title}}</a></h6><span>{{ post.date | date: '   %F' }}</span></div>
+                        <div><h6><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h6><span>{{ post.date | date: '   %F' }}</span></div>
 
 
 
